[package]
name = "ryugraph_nif"
version = "0.1.0"
edition = "2021"
authors = []

[lib]
name = "ryugraph_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.35.0"
ryugraph = "25.9"
# Additional dependencies for thread safety and error handling
thiserror = "2.0"
once_cell = "1.20"
parking_lot = "0.12"

[profile.release]
lto = true